# css-bitvector-compiler

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bit_tmp  bit_tmp.txt  bitvector_results.txt  build.rs  create_miss_count_comparison_plot.py  create_performance_comparison_plot.py  debug  debug.sh  diagram.md  dot.dot  geometric_mean_miss_ratio.txt  geometric_mean_speedup.txt  misscnt.html  misscnt.md  naive_results.txt  new_result.txt  optimized_results.txt  pyproject.toml  run.sh  task.txt  temp_generated_test.rs  temp_google_trace_test.rs  tmp  tmp.txt  tri_tmp  tri_tmp.txt
.github/workflows/: autofix.yml  ci.yml
css-gen-op/: README.md  command.json  common.py  debug_css.py  generate.py  google.trace  https___www.google.com_.css  incremental_css_engine.py
css-gen-op/a_to_b/: a_to_b.css  bit_tmp.txt  command.json  dot.dot  dot_naive.dot  dot_tri.dot  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/amazon/: amazon.css  bit_tmp.txt  command.json  dot.dot  dot_naive.dot  dot_quad.dot  dot_tri.dot  generated_bitvector_functions.rs  generated_istate_functions.rs  generated_naive_functions.rs  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/bilibili/: bilibili.css  command.json  tri_tmp.txt
css-gen-op/bing/: bing.css  command.json  tri_tmp.txt
css-gen-op/bootstrap/: bit_tmp.txt  bootstrap.css  command.json  dot.dot  dot_naive.dot  dot_quad.dot  dot_tri.dot  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/gemini/: bit_tmp.txt  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/google/: README.md  bit_tmp.txt  command.json  common.py  dot.dot  dot_naive.dot  dot_quad.dot  dot_tri.dot  generated_bitvector_functions.rs  generated_istate_functions.rs  generated_naive_functions.rs  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/hover/: command.json  hover.css  hover.html
css-gen-op/mass_skip/: bit_tmp.txt  command.json  dot.dot  dot_quad.dot  dot_tri.dot  mass_skip.css  quad_tmp.txt  tmp.txt  tri_tmp.txt
css-gen-op/netflix/: netflix.css  tri_tmp.txt
css-gen-op/reddit/: command.json  reddit.css  tri_tmp.txt
css-gen-op/testcase/: bit_tmp.txt  command.json  dot.dot  dot_naive.dot  dot_quad.dot  dot_tri.dot  quad_tmp.txt  testcase.css  tmp.txt  tri_tmp.txt
css-gen-op/tiktok/: bit_tmp.txt  command.json  quad_tmp.txt  tiktok.css  tmp.txt  tri_tmp.txt
css-gen-op/whatsapp/: command.json  tri_tmp.txt  whatsapp.css
css-gen-op/wikipedia/: bit_tmp.txt  command.json  dot.dot  tmp.txt  (+6 more)
css_compiler_benchmark/: __init__.py  generate_scatter_plot.py
examples/: bitvector_only_test.rs  get_match_result.rs  google_trace_test.rs  naive_layout_test.rs
scripts/: collect_miss_cnt.py  diff.py  diff.sh
src/: benchmark.rs  bit.rs  filter_selectors.rs  generated_bitvector_functions.rs  generated_css_functions.rs  generated_istate_functions.rs  generated_naive_functions.rs  lib.rs  main.rs  mod.rs  naive.rs  naive_gen.rs  nfa.rs  performance_test.rs  quad.rs  rec_tri.rs  runtime_shared.rs  shared_codegen_logic.rs  tri.rs
tests/: t1.html  t2.html  t3.html  t4.html  test.css
(+17 files in other folders)
