[package]
name = "css-bitvector-compiler"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "CSS Compiler with HTML/CSS parsing capabilities"

[lib]
name = "css_bitvector_compiler"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "naive-gen"
path = "src/naive_gen.rs"

[features]
default = []
generated-css = []
run-benchmark = ["generated-css"]

[dependencies]
serde_json = "1.0"
scraper = "0.17"
cssparser = "0.29"
regex = "1.7"

[profile.release]
debug = true
