[package]
name = "css-bitvector-compiler"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "CSS Compiler with HTML/CSS parsing capabilities"

[lib]
name = "css_bitvector_compiler"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "tri"
path = "src/tri.rs"

[[bin]]
name = "bit"
path = "src/bit.rs"
[[bin]]
name = "naive"
path = "src/naive.rs"

[dependencies]
cssparser = "0.35.0"
serde_json = "1.0"

[profile.release]
debug = true
