[project]
name = "css-compiler-benchmark"
version = "0.1.0"
description = "Performance benchmarking and visualization for CSS compiler incremental vs from-scratch processing"
authors = [
    {name = "CSS Compiler Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
generate-plot = "css_compiler_benchmark.generate_scatter_plot:main"

[project.urls]
Repository = "https://github.com/css-compiler/css-compiler"
Documentation = "https://github.com/css-compiler/css-compiler#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["css_compiler_benchmark"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["css_compiler_benchmark"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
